<resources>
    <string name="app_name">Ecomm</string>
    <string name="search_here">Search here...</string>
    <string name="g">G</string>
    <string name="all">All</string>
    <string name="women_s_clothing">Women\'s Clothing</string>
    <string name="men_s_clothing">Men\'s Clothing</string>
    <string name="jewelery">Jewelery</string>
    <string name="electronics">Electronics</string>
    <string name="imgproduct">imgProduct</string>
    <string name="rs">Rs </string>
    <string name="product_desc">Lock and Love Women\'s Removable Hooded</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="cart_is_empty">Cart is empty</string>
    <string name="login_to_see_cart_item">Login to see cart items</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>