<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include layout="@layout/layout_toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerInParent="true"
            android:visibility="visible"/>
    <HorizontalScrollView
    android:layout_width="match_parent"
    android:layout_height="?android:attr/actionBarSize"
    android:paddingBottom="@dimen/_5sdp"
    android:paddingTop="@dimen/_5sdp"
    android:scrollbars="none">

        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinnerSort"
            style="@style/Widget.AppCompat.DropDownItem.Spinner"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp" />

            <TextView
            android:id="@+id/txtAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="@drawable/bg_category_unselect"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/all"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/txtElectronics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_category_unselect"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/electronics"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/txtJewelery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_category_unselect"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/jewelery"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/txtMensClothing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_category_unselect"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/men_s_clothing"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/txtWomensClothing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_category_unselect"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/women_s_clothing"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />

        </LinearLayout>
    </HorizontalScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?android:attr/actionBarSize">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/secondary"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerProducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
    </RelativeLayout>
</LinearLayout>